--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,8 @@ dependencies:
   provider: ^6.0.5
   
   amity_uikit_beta_service:
-    path: ../flutter_amity_uikit_beta_service
+    path: /Users/mark/Projects/ThanakornThanom--flutter_amity_uikit_beta_service
+    # path: ../flutter_amity_uikit_beta_service
 
 dev_dependencies:
   flutter_test:
